<resources>
    <string name="app_name">Calculator_isakova_kyial</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="AC">AC</string>
    <string name="plus.minus">+/-</string>
    <string name="percent">%</string>
    <string name="division">/</string>
    <string name="multiplication">*</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="policies">Policies</string>
    <string name="edittext1">Policy</string>
    <string name="edittext2">Product Category</string>
    <string name="edittext3">Origin Country</string>
    <string name="edittext4">Brand</string>
    <string name="textview1">Current Policies</string>
    <string name="button">Export to CSV</string>
    <string name="buttontoAct">Go to Seond Activity</string>
</resources>