<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
    
    <FrameLayout
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:id="@+id/text_view"
            android:layout_marginHorizontal="@dimen/marginhorizontal"
            android:layout_gravity="bottom|end"
            android:textColor="@color/white"
            android:textSize="80sp"
            android:text="0"
            android:ellipsize="end"
            android:maxLines="@integer/material_motion_duration_long_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingVertical="@dimen/paddingvertical"
            android:paddingHorizontal="@dimen/paddinghorizontal"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:text="@string/AC"
                android:id="@+id/btn_clear"
                android:onClick="onClickNumber"
                />
            <com.google.android.material.button.MaterialButton
                android:onClick="onClickNumber"
                style="@style/Gray.Button"
                android:text="@string/plus.minus"
                android:layout_marginHorizontal="@dimen/marginhorizontal"/>
            <com.google.android.material.button.MaterialButton
                android:onClick="onClickNumber"
                style="@style/Gray.Button"
                android:text="@string/percent"
                android:layout_marginEnd="@dimen/marginend"/>
            <com.google.android.material.button.MaterialButton
                android:onClick="onClickNumber"
                android:id="@+id/btn_division"
                style="@style/Orange.Button"
                android:text="@string/division"
                />

        </LinearLayout>
        <LinearLayout
            android:paddingVertical="@dimen/paddingvertical"
            android:paddingHorizontal="@dimen/paddinghorizontal"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:onClick="onClickNumber"
                android:id="@+id/btn_seven"
                style="@style/Gray.Dark.Button"
                android:text="@string/seven"
                />
            <com.google.android.material.button.MaterialButton
                android:onClick="onClickNumber"
                android:id="@+id/btn_eight"
                style="@style/Gray.Dark.Button"
                android:text="@string/eight"
                android:layout_marginHorizontal="18dp"/>
            <com.google.android.material.button.MaterialButton
                android:onClick="onClickNumber"
                android:id="@+id/btn_nine"
                style="@style/Gray.Dark.Button"
                android:text="@string/nine"
                android:layout_marginEnd="18dp"/>
            <com.google.android.material.button.MaterialButton
                android:onClick="onClickNumber"
                android:id="@+id/btn_multiplication"
                style="@style/Orange.Button"
                android:text="@string/multiplication"
                />

        </LinearLayout>
        <LinearLayout
            android:paddingVertical="@dimen/paddingvertical"
            android:paddingHorizontal="@dimen/paddinghorizontal"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:onClick="onClickNumber"
                android:id="@+id/btn_four"
                style="@style/Gray.Dark.Button"
                android:text="@string/four"
                />
            <com.google.android.material.button.MaterialButton
                android:onClick="onClickNumber"
                android:id="@+id/btn_five"
                style="@style/Gray.Dark.Button"
                android:text="@string/five"
                android:layout_marginHorizontal="18dp"/>
            <com.google.android.material.button.MaterialButton
                android:onClick="onClickNumber"
                android:id="@+id/btn_six"
                style="@style/Gray.Dark.Button"
                android:text="@string/six"
                android:layout_marginEnd="@dimen/marginend"/>
            <com.google.android.material.button.MaterialButton
                android:onClick="onClickNumber"
                android:id="@+id/btn_minus"
                style="@style/Orange.Button"
                android:text="@string/minus"
                />

        </LinearLayout>
        <LinearLayout
            android:paddingVertical="@dimen/paddingvertical"
            android:paddingHorizontal="@dimen/paddinghorizontal"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_one"
                style="@style/Gray.Dark.Button"
                android:text="@string/one"
                android:onClick="onClickNumber"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_two"
                style="@style/Gray.Dark.Button"
                android:text="@string/two"
                android:onClick="onClickNumber"
                android:layout_marginHorizontal="18dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_three"
                style="@style/Gray.Dark.Button"
                android:text="@string/three"
                android:onClick="onClickNumber"
                android:layout_marginEnd="@dimen/marginend"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                style="@style/Orange.Button"
                android:text="@string/plus"
                />

        </LinearLayout>
        <LinearLayout
            android:paddingVertical="@dimen/paddingvertical"
            android:paddingHorizontal="@dimen/paddinghorizontal"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:onClick="onClickNumber"
                style="@style/Gray.Dark.Button"
                android:text="@string/zero"
                android:layout_width="178dp"
                android:textAlignment="textStart"
                android:paddingStart="@dimen/paddingstart"
                android:layout_marginEnd="@dimen/marginend"
                />

                android:layout_marginHorizontal="18dp"/>
            <com.google.android.material.button.MaterialButton
                android:onClick="onClickNumber"
                style="@style/Gray.Dark.Button"
                android:text="@string/dot"
                android:layout_marginEnd="@dimen/marginend"/>
            <com.google.android.material.button.MaterialButton
                android:onClick="onClickNumber"
                android:id="@+id/btn_equal"
                style="@style/Orange.Button"
                android:text="@string/equal"
                />

        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>