<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/Policies"
        android:text="@string/policies"
        android:layout_marginTop="@dimen/margintop"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="@dimen/paddingvertical"
        android:layout_marginTop="@dimen/margintop1"
        app:layout_constraintTop_toBottomOf="@+id/Policies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       >
        <EditText
            android:layout_marginHorizontal="@dimen/marginhorizontal"
            android:padding="@dimen/padding"
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="@dimen/paddingleft"
            android:text="@string/edittext1"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:cornerRadius="@dimen/cornerradius" />
        <EditText
            android:layout_marginHorizontal="@dimen/marginhorizontal"
            android:padding="@dimen/padding"
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="@dimen/paddingleft"
            android:text="@string/edittext2"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:cornerRadius="@dimen/cornerradius"
            android:layout_marginVertical="@dimen/marginvertical1"/>
        <EditText
            android:layout_marginHorizontal="@dimen/marginhorizontal"
            android:padding="@dimen/padding"
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="@dimen/paddingleft"
            android:text="@string/edittext3"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:cornerRadius="@dimen/cornerradius" />
        <EditText
            android:layout_marginHorizontal="@dimen/marginhorizontal"
            android:padding="@dimen/padding"
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingLeft="@dimen/paddingleft"
            android:text="@string/edittext4"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:cornerRadius="@dimen/cornerradius"
            android:layout_marginVertical="@dimen/marginvertical1"
            />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margintop"
            android:layout_marginBottom="@dimen/marginbottom"
            android:text="@string/textview1"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:layout_marginStart="@dimen/marginstart"/>

        <Button
            android:layout_marginHorizontal="@dimen/marginhorizontal"
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:textStyle="bold"
            android:text="@string/button"
            android:textColor="@color/black"
            android:textSize="8sp"
            app:cornerRadius="36dp"
            android:paddingStart="@dimen/paddingstart"
            android:layout_marginStart="@dimen/marginstart"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>